--- a/Italian/main/ThemeManager.apk/res/values-it/strings.xml
+++ b/Italian/main/ThemeManager.apk/res/values-it/strings.xml
@@ -1,15 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="maml_component_customization_title">Impostazioni componente</string>
+    <string name="app_name">Temi</string>
+    <string name="theme_import_activity_label">Aggiornamento tema</string>
+    <string name="theme_changing_dialog_title">Installazione nuovo tema, attendere prego..</string>
+    <string name="theme_changed_message">Applicato con successo!</string>
+    <string name="theme_changed_failed_message">Cambio tema non riuscito!</string>
+    <string name="backup_preference_title">Impostazioni Backup</string>
+    <string name="backup_theme_dialog_ok">Backup</string>
+    <string name="backup_theme_dialog_message">Backup tema corrente in %1$s</string>
+    <string name="backup_theme_progress_message">Backup in corso, attendere prego...</string>
+    <string name="backup_theme_success_message">Backup tema eseguito correttamente</string>
+    <string name="backup_theme_name">Mio backup</string>
+    <string name="theme_description_title_default">Predefinito</string>
+    <string name="theme_description_title_customized">Modificato</string>
+    <string name="component_category_finest_title">In evidenza</string>
+    <string name="component_category_more_title">Altro</string>
+    <string name="theme_component_title_framework">Temi</string>
+    <string name="theme_component_title_mms">SMS</string>
+    <string name="theme_component_title_wallpaper">Sfondi Desktop</string>
+    <string name="theme_component_title_lockwallpaper">Sfondi Lockscreen</string>
+    <string name="theme_component_title_miwallpaper">Sfondo MI</string>
+    <string name="theme_component_title_icon">Icone</string>
+    <string name="theme_component_title_boot_animation">Animazioni Boot</string>
+    <string name="theme_component_title_boot_audio">Audio Boot</string>
+    <string name="theme_component_title_font">Caratteri</string>
+    <string name="theme_component_title_ringtone">Suonerie</string>
+    <string name="theme_component_title_notification">Notifiche</string>
+    <string name="theme_component_title_alarm">Suonerie Sveglia</string>
+    <string name="theme_component_title_contact">Tastiere Telefono</string>
+    <string name="theme_component_title_lockstyle">Lockscreen</string>
+    <string name="theme_component_title_statusbar">Barre di stato</string>
+    <string name="theme_component_title_launcher">Pagine home</string>
+    <string name="theme_component_title_audio_effect">Effetti Audio</string>
+    <string name="theme_component_title_alarmstyle">Stili sveglia</string>
+    <string name="theme_component_title_clock">Orologi</string>
+    <string name="theme_component_title_photo_frame">Cornici</string>
+    <string name="theme_component_title_others">Altro</string>
+    <string name="theme_component_title_all">Temi</string>
+    <string name="apply_theme_no_select_message">Scegli i componenti</string>
+    <string name="apply_lockscreen_paper_tips">Questa lockscreen non supporta sfondi diversi.</string>
+    <string name="theme_import_from_sdcard">Importa dalla scheda SD</string>
+    <string name="theme_select_others">Sfoglia</string>
+    <string name="third_party_pickers_activity_title">Imposta %1$s</string>
+    <string name="lockstyle_personal_settings">Personalizza</string>
+    <string name="wallpaper_settings">Impostazione sfondo</string>
+    <string name="desktop_wallpaper">Schermata home</string>
+    <string name="live_wallpaper">Sfondo animati</string>
+    <string name="mi_wallpaper">Sfondo MIUI</string>
+    <string name="lockscreen_wallpaper">Schermata di blocco</string>
+    <string name="change_wallpaper">Sfondo</string>
+    <string name="component_settings_title">Modifica tema</string>
+    <string name="component_select_title">%1$s componenti selezionati</string>
+    <string name="component_include_title">Contains %1$s componenti</string>
+    <string name="apply_font_tip">Il tema contiene font, quindi è necessario riavviare.</string>
+    <string name="apply_font_btn_reboot">Applica e riavvia</string>
+    <string name="apply_font_btn_exclude">Applica senza font</string>
+    <string name="title_local">Locali</string>
+    <string name="title_online">Online</string>
+    <string name="title_component">Misti</string>
+    <string name="title_system_resource">Risorse di sistema</string>
+    <string name="long_ringtone_resource">Durata (>5sec)</string>
+    <string name="short_ringtone_resource">Breve (&lt;5sec)</string>
+    <string name="all_ringtone_resource">Tutto</string>
+    <string name="resource_preview">Anteprima</string>
+    <string name="wallpaper_set_as_both">Imposta per entrambi</string>
+    <string name="wallpaper_set_as_destop">Imposta come sfondo</string>
+    <string name="wallpaper_set_as_lockscreen">Imposta come lockscreen</string>
+    <string name="wallpaper_crop">Taglia</string>
+    <string name="wallpaper_loading_text">Caricamento...</string>
+    <string name="wallpaper_decoded_error">Decodifica fallita</string>
+    <string name="close">Chiudi</string>
+    <string name="download_success">Scaricato correttamente</string>
+    <string name="basic_info">Informazioni base</string>
+    <string name="account_info">Il mio account</string>
+    <string name="payment_info">MiCredit</string>
+    <string name="theme_batch_has_update_text">%1$d temi hanno aggiornamenti disponibili</string>
+    <string name="theme_batch_updating_text">%1$d temi sono stati aggiornati</string>
+    <string name="theme_batch_update_all">Aggiorna tutto</string>
+    <string name="theme_batch_update_dlg_title">Aggiorna</string>
+    <string name="theme_batch_update_dlg_content">Vuoi aggiornare adesso?</string>
+    <string name="theme_batch_update_dlg_content_single">Aggiornare adesso?</string>
+    <string name="theme_current_using_has_update">Il tema attuale è stato aggiornato, premi qui per applicare</string>
+    <string name="theme_immediately_apply_tip">Il tema è stato aggiornato, applicare subito?</string>
+    <string name="theme_name">%1$s</string>
+    <string name="restore_default_theme_alert">"Utilizza l'applicazione temi per acquistare o riscaricare i file."</string>
+    <string name="selected_resource_file_invalid">Il file selezionato non è valido.</string>
+    <string name="apply_theme_with_ringtones">Applica temi con suonerie</string>
+    <string name="settings">Impostazioni</string>
+    <string name="maml_component_customization_title">Settings</string>
     <string name="default_name">Predefinito</string>
     <string name="resource_select">Seleziona</string>
-    <string name="resource_app_name">Risorse Browser</string>
-    <string name="resource_delete">Elimina</string>
+    <string name="resource_app_name">Ricerca Browser</string>
     <string name="resource_price_free">Gratis</string>
-    <string name="resource_price_unit">MiCredit</string>
+    <string name="resource_price_unit"> MiCredit</string>
     <string name="resource_price_format">(%1$s)</string>
-    <string name="sdcard_not_mounted_dialog_title">Scheda SD non rilevata.</string>
-    <string name="sdcard_not_mounted_dialog_message">Scheda SD non disponibile, inserirne una adesso.</string>
+    <string name="sdcard_not_mounted_dialog_title">No SD card detected</string>
+    <string name="sdcard_not_mounted_dialog_message">"Inserisci una scheda SD ora.
+"</string>
     <string name="resource_mute">Nessuna</string>
     <string name="resource_default">Suoneria predefinita</string>
     <string name="resource_ringtone_default">Suonerie</string>
@@ -40,7 +127,6 @@
     <string name="resource_downloading">Download in corso</string>
     <string name="resource_waiting_download">In attesa del download..</string>
     <string name="resource_import_successful">Download completato.</string>
-    <string name="resource_import_failed">Importazione fallita</string>
     <string name="resource_delta_update_successful">Aggiornamento patch completato，risparmiati %1$s.</string>
     <string name="resource_delta_update_failed">Aggiornamento patch fallito! Verrà scaricata la risorsa completa</string>
     <string name="resource_delta_update_total">%1$d aggiornamenti patch. Salvati in totale %2$s</string>
@@ -48,7 +134,6 @@
     <string name="resource_update">Aggiorna</string>
     <string name="resource_buy">Acquista</string>
     <string name="resource_importing">Importazione</string>
-    <string name="resource_ringtone_playing_error">Errore di riproduzione</string>
     <string name="online_no_network">Impossibile connettere alla rete</string>
     <string name="online_search_hint">Cerca risorse online</string>
     <string name="loading">Caricamento...</string>
@@ -88,14 +173,6 @@
     <string name="resource_purchase_getting_order">Recupero informazioni ordine…</string>
     <string name="resource_purchase_waiting_payment">In attesa delle informazioni di pagamento…</string>
     <string name="resource_purchase_verifying_payment">Verifica informazioni di pagamento…</string>
-    <string name="resource_download_trial">Prova gratuita</string>
-    <string name="resource_apply_trial">Prova adesso</string>
-    <string name="resource_on_trial">Prova: %1$s</string>
-    <string name="resource_trial_time">（prova per %1$d minuti）</string>
-    <string name="resource_trial_end_title">Prova terminata</string>
-    <string name="resource_trial_end_message">"La prova di %1$s terminata. Se ti piace prosegui con l'acquisto."</string>
-    <string name="resource_trial_end_restore">Termine prova</string>
-    <string name="resource_trial_end_purchase">acquista</string>
     <string name="deleting">Eliminazione...</string>
     <string name="resource_title_select_ringtone">Seleziona suoneria</string>
     <string name="resource_tip_select_ringtone">Nessuna suoneria selezionata</string>
@@ -104,6 +181,7 @@
     <string name="resource_expand_full_text">Espandi</string>
     <string name="resource_account_login">Accedi</string>
     <string name="resource_account_switch">Cambia account</string>
+    <string name="resource_account_current">Account: %1$s</string>
     <string name="resource_account_login_title">Accedi</string>
     <string name="resource_account_fail_to_add">Impossibile aggiungere account!</string>
     <string name="resource_account_abnormal_state">Errore account, riprovare più tardi.</string>
@@ -170,97 +248,7 @@
     <string name="resource_unknow_error">Errore sconosciuto.</string>
     <string name="resource_user_know">OK</string>
     <string name="resource_hint">Avviso</string>
+    <string name="resource_cancel">Annulla</string>
+    <string name="resource_ok">Ok</string>
     <string name="resource_ringtone_volume_mute">Suoneria silenziata</string>
-    <string name="app_name">Temi</string>
-    <string name="theme_changing_dialog_title">Installazione nuovo tema, attendere prego..</string>
-    <string name="theme_changed_message">Applicato con successo!</string>
-    <string name="theme_changed_failed_message">Cambio tema non riuscito!</string>
-    <string name="backup_preference_title">Impostazioni Backup</string>
-    <string name="backup_theme_dialog_ok">Backup</string>
-    <string name="backup_theme_dialog_message">Backup tema corrente in %1$s</string>
-    <string name="backup_theme_progress_message">Backup in corso, attendere prego...</string>
-    <string name="backup_theme_success_message">Backup tema eseguito correttamente</string>
-    <string name="backup_theme_name">Mio backup</string>
-    <string name="theme_description_title_default">Default</string>
-    <string name="theme_description_title_customized">Modificato</string>
-    <string name="component_category_finest_title">In evidenza</string>
-    <string name="component_category_more_title">Altro</string>
-    <string name="theme_component_title_framework">Temi</string>
-    <string name="theme_component_title_mms">SMS</string>
-    <string name="theme_component_title_wallpaper">Sfondi Desktop</string>
-    <string name="theme_component_title_lockwallpaper">Sfondi Lockscreen</string>
-    <string name="theme_component_title_miwallpaper">Sfondo MI</string>
-    <string name="theme_component_title_icon">Icone</string>
-    <string name="theme_component_title_boot_animation">Animazioni Boot</string>
-    <string name="theme_component_title_boot_audio">Audio Boot</string>
-    <string name="theme_component_title_font">Caratteri</string>
-    <string name="theme_component_title_ringtone">Suonerie</string>
-    <string name="theme_component_title_notification">Notifiche</string>
-    <string name="theme_component_title_alarm">Suonerie Sveglia</string>
-    <string name="theme_component_title_contact">Tastiere Telefono</string>
-    <string name="theme_component_title_lockstyle">Lockscreen</string>
-    <string name="theme_component_title_statusbar">Barre di stato</string>
-    <string name="theme_component_title_launcher">Pagine home</string>
-    <string name="theme_component_title_audio_effect">Effetti Audio</string>
-    <string name="theme_component_title_alarmstyle">Stili sveglia</string>
-    <string name="theme_component_title_clock">Orologi</string>
-    <string name="theme_component_title_photo_frame">Cornici</string>
-    <string name="theme_component_title_others">Altro</string>
-    <string name="theme_component_title_all">Temi</string>
-    <string name="theme_import_from_sdcard">Importa dalla scheda SD</string>
-    <string name="theme_select_others">Sfoglia</string>
-    <string name="third_party_pickers_activity_title">Imposta %1$s</string>
-    <string name="lockstyle_personal_settings">Personalizza</string>
-    <string name="wallpaper_settings">Impostazione sfondo</string>
-    <string name="desktop_wallpaper">Schermata home</string>
-    <string name="live_wallpaper">Sfondo animati</string>
-    <string name="mi_wallpaper">Sfondo MIUI</string>
-    <string name="lockscreen_wallpaper">Schermata di blocco</string>
-    <string name="change_wallpaper">Sfondo</string>
-    <string name="apply_font_tip">Il tema contiene font, quindi è necessario riavviare.</string>
-    <string name="apply_font_btn_reboot">Applica e riavvia</string>
-    <string name="apply_font_btn_exclude">Applica senza font</string>
-    <string name="apply_default_font_tip">Continuare ad utilizzare il font di sistema?</string>
-    <string name="theme_yes">Sì</string>
-    <string name="theme_no">No</string>
-    <string name="title_component">Misti</string>
-    <string name="title_system_resource">Risorse di sistema</string>
-    <string name="long_ringtone_resource">Durata (>5sec)</string>
-    <string name="short_ringtone_resource">Breve (&lt;5sec)</string>
-    <string name="all_ringtone_resource">Tutto</string>
-    <string name="wallpaper_set_as_both">Imposta per entrambi</string>
-    <string name="wallpaper_set_as_destop">Imposta come sfondo</string>
-    <string name="wallpaper_set_as_lockscreen">Imposta come lockscreen</string>
-    <string name="wallpaper_crop">Taglia</string>
-    <string name="wallpaper_loading_text">Caricamento...</string>
-    <string name="wallpaper_decoded_error">Decodifica fallita</string>
-    <string name="close">Chiudi</string>
-    <string name="download_success">Scaricato correttamente</string>
-    <string name="basic_info">Informazioni base</string>
-    <string name="account_info">Il mio account</string>
-    <string name="purchased_list">Lista acquisti</string>
-    <string name="payment_info">MiCredit</string>
-    <string name="theme_batch_has_update_text">%1$d temi hanno aggiornamenti disponibili</string>
-    <string name="theme_batch_updating_text">%1$d temi sono stati aggiornati</string>
-    <string name="theme_batch_update_all">Aggiorna tutto</string>
-    <string name="theme_batch_update_dlg_title">Aggiorna</string>
-    <string name="theme_batch_update_dlg_content">Vuoi aggiornare adesso?</string>
-    <string name="theme_batch_update_dlg_content_single">Aggiornare adesso?</string>
-    <string name="theme_current_using_has_update">Il tema attuale è stato aggiornato, premi qui per applicare</string>
-    <string name="theme_immediately_apply_tip">Il tema è stato aggiornato, applicare subito?</string>
-    <string name="theme_name">%1$s</string>
-    <string name="theme_fresh_man_notifaction">Prova qualche nuovo tema.</string>
-    <string name="selected_resource_file_invalid">Il file selezionato non è valido.</string>
-    <string name="apply_theme_with_ringtones">Applica temi con suonerie</string>
-    <string name="settings">Impostazioni</string>
-    <string name="theme_user_agreement_content1">Leggi attentamente i termini e le condizioni prima di utilizzare questo prodotto:</string>
-    <string name="theme_user_agreement_content2">" Accordo utente"</string>
-    <string name="theme_user_agreement_content3">" e "</string>
-    <string name="theme_user_agreement_content4">Regolazione Privacy</string>
-    <string name="theme_user_agreement_content5">". Consenti l'utilizzo della rete dati?"</string>
-    <string name="theme_user_agreement_title">Dichiarazione e sollevamento responsabilità</string>
-    <string name="theme_user_agreement_allow">"Sono d'accordo"</string>
-    <string name="theme_user_agreement_remind_never">Non mi notificare</string>
-    <string name="theme_user_agreement_remind_again">"Notificami quando viene richiesto l'accesso alla rete dati"</string>
-    <string name="theme_user_agreement_remind_summary">Avrà effetto dal prossimo avvio</string>
 </resources>
