--- a/Italian/main/Updater.apk/res/values-it/strings.xml
+++ b/Italian/main/Updater.apk/res/values-it/strings.xml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="sina_share_pendding">Invio in corso...</string>
-    <string name="sina_share_success">Invio completato!</string>
-    <string name="sina_share_fail">Invio fallito!</string>
-    <string name="sina_token_expired_warning">"L'account Weibo è scaduto, si prega di riprovare"</string>
-    <string name="sina_token_invalid_warning">"L'account Weibo non è valido, si prega di riprovare"</string>
     <string name="kernel_upgrade_link" />
     <string name="kernel_upgrade_version" />
     <string name="app_name">Updater</string>
@@ -68,7 +63,6 @@
     <string name="no_updates_warning2">L\'applicazione ti notificherà ogni nuovo aggiornamento disponibile</string>
     <string name="new_updates_found_title">Aggiornamenti disponibili</string>
     <string name="new_update_content_title">Trovata nuova versione\u0020</string>
-    <string name="new_update_content_notification_shade" />
     <string name="new_update_downloading_body">Download nuova versione:%s</string>
     <string name="new_update_download_complete_body">Nuova versione aggiornabile:%s</string>
     <string name="update_success_title">Congratulazioni, aggiornamento completato</string>
@@ -83,7 +77,6 @@
     <string name="internal_build">Build Interna</string>
     <string name="top_secret_build">Bbuild Segreta</string>
     <string name="stable_build">Build Stabile</string>
-    <string name="unstable_build">Build Non Stabile</string>
     <string name="about_device">Informazioni</string>
     <string name="emegency_build">Build:</string>
     <string name="wifi_not_available_title">Wi-Fi non connesso</string>
@@ -102,16 +95,11 @@ Più di %2$s utenti hanno eseguito l'accesso a MIUI %3$s"</string>
 Più di %2$s utenti hanno eseguito l'aggiornamento a MIUI %3$s"</string>
     <string name="sign_in_info_rank_more">"La tua posizione di aggiornamento è oltre %1$s.
 Più di %2$s utenti hanno eseguito l'aggiornamento a MIUI %3$s"</string>
-    <string name="sign_in_add_account">Si prega di attivare il tuo account Xiaomi</string>  
+    <string name="sign_in_add_account">Si prega di attivare il tuo account Xiaomi</string>
     <string name="sign_in_add_account_helper">Il tuo telefono non ha un account MIUI attivo, aggiungine uno per ricevere punti</string>
     <string name="my_rank">Aggiorna posizione:</string>
     <string name="check_update">Controlla aggiornamenti</string>
-    <string name="move_data_to_sdcard_title">Sposta i dati sulla scheda SD</string>
-    <string name="move_data_to_sdcard_not_enough_space_message">spazio insufficiente sulla scheda SD per spostare i %d MB di dati selezionati</string>
-    <string name="moving_data_to_sdcard_message">Dati in spostamento su scheda SD, non attivare la modalità USB e non rimuovere la scheda SD</string>
-    <string name="moving_data_to_sdcard_progress_format">Trasferiti %1$dd Kb di %2$d Kb</string>
     <string name="finish_download">Download completato</string>
-    <string name="updater_finish_download">Download ROM completato</string>
     <string name="install_whole_rom">E\' consigliato il download del pacchetto full ROM</string>
     <string name="check_update_policy">Verifica impostazioni di aggiornamento</string>
     <string name="check_update_when_wifi_available">Cerca aggiornamenti usando solo Wi-Fi</string>
@@ -162,17 +150,13 @@ Contribuisci al sondaggio il prossimo Martedì"</string>
     <string name="next">Prossimo</string>
     <string name="previous">Precedente</string>
     <string name="finish">Fine</string>
-    <string name="comment_publish">Invia</string>
-    <string name="edit_comment_title">modifica commento</string>
-    <string name="edit_comment">Aggiungi commento</string>
-    <string name="edit_text_default">Scrivi commento</string>
-    <string name="comment_sending">Invio in corso...</string>
-    <string name="comment_upload_failed">Impossibile inviare commento</string>
-    <string name="comment_upload_hint">Grazie per il tuo commento</string>
-    <string name="comment_upload_success">Commento inviato correttamente!</string>
-    <string name="comment_invalid">Tocca per commentare</string>
-    <string name="comment_upload_not_logined">Accedi prima di inviare commenti</string>
     <string name="fourgrid_hint_text">Grazie per aver scelto la versione developer di MIUI. Comunicaci cosa ne pensi ed aiutaci a rendere MIUI una ROM migliore!</string>
     <string name="fourgrid_notificaiont">Mostra notifica</string>
     <string name="fourgrid_no_notificaiont">Nascondi notifica</string>
+    <string name="toast_update_failed_hints">Aggiornamento fallito, si prega di riavviare e riprovare!</string>
+    <string name="toast_msg_reboot">Aggiornamento completato con successo, si prega di riavviare</string>
+    <string name="toast_need_login">Se si prega di effettuare il login del tuo account Xiaomi</string>
+    <string name="notify_title_reboot_now">Aggiornamento completato con successo, si prega di riavviare</string>
+    <string name="button_text_reboot_now">Riavvia ora</string>
+    <string name="toast_not_enough_free_space">"Spazio insufficente per l'aggiornamento OTA,si prega di liberare la memoria"</string>
 </resources>
