--- a/Italian/main/Settings.apk/res/values-it/strings.xml
+++ b/Italian/main/Settings.apk/res/values-it/strings.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="menu_item_show_more">Show more</string>
-    <string name="ringtone_mute">None</string>
-    <string name="title_system_resource">System resources</string>
-    <string name="resource_ringtone_volume_mute">Your ringer is currently silenced</string>
-    <string name="audio_list_loading">Loading…</string>
-    <string name="title_local_resource">Local resources</string>
-    <string name="online_resource_entry">Online resources</string>
-    <string name="status_bar_style_settings">Notifications</string>
-    <string name="status_bar_and_notification_bar">Notification shade and status bar</string>
-    <string name="status_bar_settings_toggle_layout_style">Toggle layout style</string>
-    <string name="status_bar_settings_toggle_layout_style_compact">Bar</string>
-    <string name="status_bar_settings_toggle_layout_style_single_page">Page</string>
-    <string name="status_bar_settings_toggle_layout_style_applying">Changing style…</string>
-    <string name="status_bar_settings_custom_notification">Manage notifications</string>
-    <string name="status_bar_settings_all_app_display_loading">Loading…</string>
-    <string name="status_bar_settings_show_notificationBar_notification">Show in notification shade</string>
-    <string name="status_bar_settings_show_statusBar_notification">Show in keyguard</string>
-    <string name="status_bar_filter_item_preview_image">Preview</string>
-    <string name="status_bar_filter_item_description">To configure notifications, go to General Settings > Notifications > Manage notifications</string>
-    <string name="status_bar_settings_notification_bar">Notification shade</string>
+    <string name="menu_item_show_more">Altro</string>
+    <string name="ringtone_mute">Nessuna</string>
+    <string name="title_system_resource">Risorse di sistema</string>
+    <string name="resource_ringtone_volume_mute">La tua suoneria è attualmente silenziata</string>
+    <string name="audio_list_loading">Caricamento…</string>
+    <string name="title_local_resource">Risorsa locale</string>
+    <string name="online_resource_entry">Risorse online</string>
+    <string name="status_bar_style_settings">Notifiche</string>
+    <string name="status_bar_and_notification_bar">Barra notifiche e barra di stato</string>
+    <string name="status_bar_settings_toggle_layout_style">Cambia stile layout</string>
+    <string name="status_bar_settings_toggle_layout_style_compact">Barra</string>
+    <string name="status_bar_settings_toggle_layout_style_single_page">Pagina</string>
+    <string name="status_bar_settings_toggle_layout_style_applying">Cambiamento stile…</string>
+    <string name="status_bar_settings_custom_notification">Gestione notifiche</string>
+    <string name="status_bar_settings_all_app_display_loading">Caricamento…</string>
+    <string name="status_bar_settings_show_notificationBar_notification">Mostra nella barra notifiche</string>
+    <string name="status_bar_settings_show_statusBar_notification">Mostra nel keyguard</string>
+    <string name="status_bar_filter_item_preview_image">Anteprima</string>
+    <string name="status_bar_filter_item_description">Per configurare le notifiche, vai su Impostazioni Generali > Notifiche > Gestione notifiche</string>
+    <string name="status_bar_settings_notification_bar">Barra notifiche</string>
     <string name="status_bar_settings_toggle_collapse_after_clicked">Collapse after touch</string>
     <string name="status_bar_settings_show_screenshot_notification">Show screenshot notification</string>
     <string name="status_bar_settings_status_bar">Status bar</string>
