--- a/Italian/main/Settings.apk/res/values-it/strings.xml
+++ b/Italian/main/Settings.apk/res/values-it/strings.xml
@@ -20,33 +20,33 @@
     <string name="status_bar_filter_item_preview_image">Anteprima</string>
     <string name="status_bar_filter_item_description">Per configurare le notifiche, vai su Impostazioni Generali > Notifiche > Gestione notifiche</string>
     <string name="status_bar_settings_notification_bar">Barra notifiche</string>
-    <string name="status_bar_settings_toggle_collapse_after_clicked">Collapse after touch</string>
-    <string name="status_bar_settings_show_screenshot_notification">Show screenshot notification</string>
-    <string name="status_bar_settings_status_bar">Status bar</string>
-    <string name="status_bar_settings_show_network_speed">Show connection speed</string>
-    <string name="status_bar_settings_expandable_under_keyguard">Enable on lock screen</string>
-    <string name="status_bar_settings_basic_settings">Basic settings</string>
-    <string name="status_bar_settings_advanced">Additional settings</string>
-    <string name="status_bar_settings_show_flow_info">Show flow details</string>
-    <string name="status_bar_settings_show_carrier">Show service provider</string>
-    <string name="status_bar_settings_custom_carrier">Edit service provider name</string>
-    <string name="status_bar_settings_no_carrier">None</string>
-    <string name="status_bar_settings_show_carrier_summary">Only display on lock screen</string>
-    <string name="status_bar_settings_show_wifi_name">Show WLAN</string>
-    <string name="status_bar_settings_custom_wifi_name">Edit WLAN name</string>
-    <string name="status_bar_screen_button_key">Screen virtual keys</string>
-    <string name="status_bar_key_position_custom">Custom key position</string>
-    <string name="status_bar_screen_key_menu">Menu button</string>
-    <string name="status_bar_screen_key_home">Home button</string>
-    <string name="status_bar_screen_key_recent_apps">Recent apps button</string>
-    <string name="status_bar_screen_key_back">Back button</string>
+    <string name="status_bar_settings_toggle_collapse_after_clicked">Collassa dopo il tocco</string>
+    <string name="status_bar_settings_show_screenshot_notification">Mostra notifiche screenshot</string>
+    <string name="status_bar_settings_status_bar">Barra di stato</string>
+    <string name="status_bar_settings_show_network_speed">Mostra velocità di connessione</string>
+    <string name="status_bar_settings_expandable_under_keyguard">Abilita nella schermata di blocco</string>
+    <string name="status_bar_settings_basic_settings">Impostazioni base</string>
+    <string name="status_bar_settings_advanced">Impostazioni aggiuntive</string>
+    <string name="status_bar_settings_show_flow_info">Mostra dettagli trasmissione</string>
+    <string name="status_bar_settings_show_carrier">Mostra operatore</string>
+    <string name="status_bar_settings_custom_carrier">"Modifica il nome dell'operatore"</string>
+    <string name="status_bar_settings_no_carrier">Nessuna</string>
+    <string name="status_bar_settings_show_carrier_summary">Mostra solo nella schermata di blocco</string>
+    <string name="status_bar_settings_show_wifi_name">Mostra Wi-Fi</string>
+    <string name="status_bar_settings_custom_wifi_name">Modifica nome rete Wi-Fi</string>
+    <string name="status_bar_screen_button_key">Tasti virtuali su schermo</string>
+    <string name="status_bar_key_position_custom">Personalizza posizione tasti</string>
+    <string name="status_bar_screen_key_menu">Tasto Menu</string>
+    <string name="status_bar_screen_key_home">Tasto Home</string>
+    <string name="status_bar_screen_key_recent_apps">Tasto applicazioni recenti</string>
+    <string name="status_bar_screen_key_back">Tasto indietro</string>
     <string name="additional_system_update" />
     <string name="additional_system_update_menu" />
     <string name="input_method_selector_show_automatically_value">0</string>
     <string name="input_method_selector_always_show_value">1</string>
     <string name="input_method_selector_always_hide_value">2</string>
     <string name="input_method_selector_visibility_default_value">0</string>
-    <string name="yes">Yes</string>
+    <string name="yes">Si</string>
     <string name="no">No</string>
     <string name="create">Crea</string>
     <string name="allow">Consenti</string>
@@ -504,15 +504,15 @@ Per riprendere a utilizzare il tablet devi effettuare un ripristino dei dati di 
     <string name="wifi_display_options_forget">Elimina</string>
     <string name="wifi_display_options_done">Fine</string>
     <string name="wifi_display_options_name">Nome</string>
-    <string name="wifi_display_certification_heading">Certification</string>
-    <string name="wifi_display_session_info">Session info</string>
-    <string name="wifi_display_listen_mode">Enable listen mode</string>
-    <string name="wifi_display_autonomous_go">Enable autonomous GO</string>
-    <string name="wifi_display_pause">Pause</string>
-    <string name="wifi_display_resume">Resume</string>
-    <string name="wifi_display_wps_config">WPS configuration</string>
-    <string name="wifi_display_listen_channel">Listen channel</string>
-    <string name="wifi_display_operating_channel">Operating channel</string>
+    <string name="wifi_display_certification_heading">Certificazione</string>
+    <string name="wifi_display_session_info">Info sessione</string>
+    <string name="wifi_display_listen_mode">Abilità modalità ascolto</string>
+    <string name="wifi_display_autonomous_go">Abilita GO autonomo</string>
+    <string name="wifi_display_pause">Pausa</string>
+    <string name="wifi_display_resume">Riprendi</string>
+    <string name="wifi_display_wps_config">Configurazione WPS</string>
+    <string name="wifi_display_listen_channel">"Canale d'ascolto"</string>
+    <string name="wifi_display_operating_channel">Canale operativo</string>
     <string name="nfc_quick_toggle_title">NFC</string>
     <string name="nfc_quick_toggle_summary">Consenti lo scambio di dati quando il tablet tocca un altro dispositivo</string>
     <string name="android_beam_settings_title">Android Beam</string>
